# Primus

./: .cursorignore  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  0001-ROCm-gfx1250-compatibility-SDPA-MATH-backend-vocab_s.patch  ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_SUMMARY.txt  Auto_Benchmarking_README.md  CHANGELOG.md  CI_PR_DESCRIPTION_GUIDE.md  CREATE_PR_INSTRUCTIONS.md  FINAL_SUMMARY.md  FLA_LCE_FP32_REGRESSION.md  FLA_TRITON_NAN_BUG.md  FORWARD_STEP_DESIGN_DECISION.md  FORWARD_STEP_ENHANCEMENTS.md  GDN_FLA_PARITY.md  IMPLEMENTATION_SUMMARY.md  KDA_FLA_PARITY.md  LICENSE  LOSS_COMPUTATION_FIX.md  MAXTEXT_NEW_ARCHITECTURE.md  MEGATRON_BRIDGE_INSTALL.md  MEGATRON_BRIDGE_INTEGRATION.md  MERGE_CHANGES_SUMMARY.md  MULTI_TURN_IMPLEMENTATION.md  OFFLINE_DATASET_IMPLEMENTATION.md  OPTIMIZATION_COMPLETE.md  OPTIMIZATION_WEEK1_SUMMARY.md  OPTIMIZATION_WEEK2_SUMMARY.md  OPTIMIZATION_WEEK3_PROGRESS.md  OPTIMIZATION_WEEK3_SUMMARY.md  PARALLEL_STATE_FIX.md  PATCH_PHASE_ANALYSIS.md  PATCH_VERSION_USAGE.md  PILOT_REWRITE_PROMPT.md  POSITION_IDS_FIX.md  PR.md  (+167 more)
.cursor/: rules
.github/: CODEOWNERS  dependabot.yml
.skills/: primus-projection.md
benchmark/: gemm.md
benchmark_result/: gemm_M1024_N4096_K4096_20250818-024927.md  gemm_M1024_N4096_K4096_20250818-025034.md  gemm_M1024_N4096_K4096_20250818-025138.md  gemm_M4096_N4096_K4096_20250818-024219.md  gemm_M4096_N4096_K4096_20250818-024413.md  gemm_M4096_N4096_K4096_20250818-024610.md  gemm_M4096_N4096_K4096_20250818-024804.md  rccl_rankstats.md
chn/: CLI-ARCHITECTURE_CN.md  PRIMUS-CLI-GUIDE_CN.md
debug/: llama3_8B-FP8-pretrain.yaml
deepseek-v4/: develop_deepseek-v4-in-primus.md  download_ref.sh
dev_notes/: 2025-11-27_megatron_refactor_summary.md
doc/: How_to_benchmark_Aiter_atention.md
docs/: .gitignore  .readthedocs.yaml  BEST_PRACTICES.md  CHANGELOG.md  CHECKPOINT_METADATA_FIX.md  CI_CD.md  CONFIGURATION_GUIDE.md  DATASET_VALIDATION.md  DATASET_VALIDATION_IMPLEMENTATION.md  How_to_run_gpt_oss_pretraining.md  MEGATRON_BRIDGE_LOSS_PORT.md  MI355X_128k_MoE_NaN_repro.md  MULTI_TURN_CONVERSATIONS.md  ODC_rocm_blog.md  ODC_rocm_blog_cn.md  ODC_rocm_blog_en.md  OFFLINE_DATASET_GUIDE.md  PATCH_SYSTEM.md  PERFORMANCE.md  README.md  README_Mega_MoE.md  README_NATIVE_SFT_LORA_EN.md  TRAINER_ARCHITECTURE.md  USER_GUIDE.md  advanced.md  cli.md  conf.py  dataset_processing.md  dataset_processing_zh.md  faq.md  index.md  install-on-host.md  installation.md  megatron_bridge_quickstart.md  models.md  node-smoke-test-instruction.md  node-smoke.md  posttraining.md  preflight-direct.md  preflight.md  (+6 more)
docs_deprecated/: README.md  node-smoke.md  preflight-direct.md  projection.md  quickstart.md  tuning_agent.md
examples/: CLI_EXAMPLES_GUIDE.md  README.md  primus.yaml.example  primus.yaml.example.v2  primusrc.example  run_hybrid-models.sh  run_k8s_pretrain.sh  run_local_pretrain.sh  run_local_pretrain_cli.sh  run_local_pretrain_mlperf.sh  run_megatron_bridge.sh  run_poolside_1T.sh  run_pretrain.sh  run_pretrain_cli.sh  run_pretrain_mlperf.sh  run_qwen3_30B_A3B_posttrain.sh  run_slurm_pretrain.sh  run_slurm_pretrain_cli.sh  setup_turbo.sh  test_llying.sh
experiments/: profile_breakdown.py  run_perf_exp.sh
megatron_patches/: 01-mamba_model-fused-ce.patch  02-optimizer-torch-fused-adam.patch  03-mlp-fla-swiglu.patch  04-torch_norm-fla-rmsnorm.patch  05-transformer_config-hybrid-init.patch  06-pretrain_mamba-fla-data-and-diag.patch  06-pretrain_mamba-fla-data.patch
odc_rocm_dev/: .gitignore  README.md  build_rocshmem_backend.sh  pyproject.toml  setup.py
pilot/: AGENTS.md  ARCHITECTURE.md  README.cn.md  README.cn.supplements.md  README.legacy.md  README.md  README.supplements.md  SETUP.md  __main__.py  cluster.yaml
primus/: README_patch.md  __init__.py  mlperf_log_suppression.py  post_train.py  pretrain.py  primus_config.py
production_docs/: .readthedocs.yaml  README.md  conf.py  index.md
runner/: HOOKS.md  (+20 more)
(+3429 files in other folders)
